fixed nav on mobile on service select

--- a/src/app/(protected)/home.module.scss
+++ b/src/app/(protected)/home.module.scss
@@ -24,7 +24,7 @@
 
 	transition: grid-template-columns 300ms;
 
-	&:has(input:checked) {
+	&:has(.navCheckbox:checked) {
 		--_w: 70vi;
 
 		.nav {
